@@ -50,6 +50,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9065: tarfile no longer uses "root" as the default for the uname and
+  gname field.
+
 - Issue #1050268: parseaddr now correctly quotes double quote and backslash
   characters that appear inside quoted strings in email addresses.
 
